// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingKibana is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiLoadingKibana euiLoadingKibana--medium testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--medium"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</div>
`;

exports[`EuiLoadingKibana size l is rendered 1`] = `
<div
  class="euiLoadingKibana euiLoadingKibana--large"
>
  <div
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--large"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</div>
`;

exports[`EuiLoadingKibana size m is rendered 1`] = `
<div
  class="euiLoadingKibana euiLoadingKibana--medium"
>
  <div
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--medium"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</div>
`;

exports[`EuiLoadingKibana size xl is rendered 1`] = `
<div
  class="euiLoadingKibana euiLoadingKibana--xLarge"
>
  <div
    class="euiLoadingKibana__icon"
  >
    <svg
      class="euiIcon euiIcon--xLarge"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</div>
`;
